# zuspaet

./: .gitignore  Cargo.toml  README.md  settings.json
src/: absences.rs  db.rs  list.rs  main.rs  menu.rs  new.rs  settings.rs  stats.rs  themes.rs  time.rs  toast.rs
