[package]
name = "zuspaet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced/", branch = "master", features = ["webgl", "web-colors"] }
serde = "1.0.198"
serde_json = "1.0.116"
serde_derive = "1.0.200"
chrono = { version = "0.4.38", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { git = "https://github.com/iced-rs/iced/", branch = "master", features = ["webgl", "web-colors"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.39.3", features = ["full"]}
iced = { git = "https://github.com/iced-rs/iced/", branch = "master", features = ["tokio"] }
